[project]
name = "FastCampus-MCP-A2A"
version = "0.0.1"
description = "FastCampus Online Lecture - MCP & A2A"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Hyunjun Jeon", email = "jeonhj920@gmail.com" }
]
dependencies = [
    "a2a-sdk>=0.3.0",
    "fastmcp>=2.10.6",
    "google-adk>=1.9.0",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
    "ty>=0.0.1a16",
]
